fix: card grid gap on different browsers

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -9,4 +9,5 @@
   background-size: 282px 282px;
   width: 282px;
   height: 361px;
+  margin-bottom: 20px;
 }
